@@ -496,6 +496,11 @@
 	* Add evas_object_freeze_events_set/get to discard the object events.
 	they will be useful some cases such as transition.
 
-2011-11-02 Nicolas Aguirre
+2011-11-02  Nicolas Aguirre
 	* Add gl_cocoa engine
 
+2011-11-16  Carsten Haitzler (The Rasterman)
+
+        * JPEG encode and decode in eet now uses ISLOW (not IFAST) due to
+        noticable quality losses in the chase for speed. It will use
+        IFAST for quality less than 60 when encoding    
